:bug:: Bug fixes caused by branch squash